--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -130,6 +130,18 @@
 {% endblock %}
 {% block js %}
 <script>
+$("#dd").addClass("active");
+var slideIndex = 1;
+  showDivs(slideIndex);
+  
+  function plusDivs(n) {
+    showDivs(slideIndex += n);
+  }
+  
+  function currentDiv(n) {
+    showDivs(slideIndex = n);
+  }
+
 function showDivs(n) {
     var i;
     var x = document.getElementsByClassName("mySlides");
